<resources>
    <string name="app_name">Gallery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">text</string>
    <string name="galley">Galley</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="size">Size</string>
    <string name="favorites">Favorites</string>
    <string name="secure_lock">Secure Lock</string>
    <string name="trash_bin">Trash bin</string>
    <string name="change_language">Change Language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="other_tools">Other tools</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="features_tools">Features tools</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
</resources>